first half of the background section

--- a/01-database.Rmd
+++ b/01-database.Rmd
@@ -129,13 +129,16 @@ kable(data_sum_table, "latex", booktabs = T, col.names = NULL,
 ```
 
 ## Background & Summary  
-- Relevance of data. Why data exists. Compare to alternatives to metrics stored in data.  
-- Caveats to using the data. Types of data used alongside for analyses/ context.  
-- General trends in data and their biological origin.  
-- Example of these trends.  
-- Importance of outliers and other patterns in data to the users/collectors of it.  
-- Example of program/project that relies on the data.  
-- Alternative, less important origins for trends in the data.  
+- Popularisation of plastic as a material for diverse uses in our daily lives has lead to a large and increasing amount of artificial materials in the world's oceans. Collectively referred to as anthropogenic marine debris (AMD), these substrates comprised of plastics, rubber, and manufactured wood products, among other solid wastes from human activities in oceans and seas, also represent a novel type of habitat that is growing increasingly common. [cite]   
+- Scientific literature documented organisms associated with AMD as early as the 1970's [cite], with more frequent and detailed records growing in number since the 1990's [cite]. Researchers investigating the phenomenon of plastic pollution across its varied dimensions have often included secondary remarks of life attached to their study materials. A smaller subset of researchers has specifically studied the organisms themselves. Due to the diverse nature of the disciplines and modalities, records vary significantly across all meaningful dimensions, from collection methods through to how they are reported.  
+- Previous efforts towards compiling these records have resulted in several review papers [cites]. In one case, collaboration across disciplines resulted in a comprehensive database of all organisms attached to catalogued debris suspected to originate from the 2015 tsunami that occurred along the coast of Japan's Tohuku prefecture [cite]. This database however, represents the first resource tailored for analysis of organisms associated with AMD globally from a comprehensive search of scientific publications and includes all of the records from these cited previous efforts. 
+- The database also not only contains records of identified organisms, but further includes information on methodology, substrate materials, and spatial co-ordinates. However, these variables were often only reported at the study level and not associated with individual organisms. Associations between them and the organisms are therefore not suitable for investigation using most types of statistical analysis.  
+- Taxonomic identifications of organisms in their source material have been joined to their currently accepted nomenclature as of March 2020 available from specialist-maintained open taxonomic databases and include stable identifiers. Substrate materials as reported in the literature have also been associated with standardised contemporary nomenclature from IUPAC [cite] and the DOI or ISBN is included for each publication within the database. Where relevant, each variable in the database has been named according to the Darwin Core Standard [cite]. This has all been done to facilitate the use of this database alongside others and as disciplines inevitably update their nomenclature.  
+- It may be useful to combine this database with others containing more detailed data on the organisms' evolutionary biology, physical traits, behaviour, or ecological function. Spatial analyses may georeference the coordinates of this database into marine regions of varying scope, such as through almanacs available through XXXX [cite].  
+- Used alone, this database shows an increasing scientific interest in this novel ecosystem and changes in the way that it is studied. Molecular techniques have yielded a boom in the known diversity of organisms on AMD, particularly for bacteria and fungi. It also highlights the need for more research in the Southern Hemisphere and research in general. Almost all organisms were recorded only once or twice.  
+- While this database has the potential to yield important findings, its sparse nature relative to the known diversity of organisms and environments in the world's oceans is also likely to support the need for more research across disciplines. 
+- In its current state, it may be particularly useful for those researching the impacts of AMD on coastal environments. This database can be easily combined with new findings to provide background and context. It may also be useful for tracking the locations or spread of invasive species for biosecurity researchers and marine resource managers. 
+- Trends found in this database should be presented with the caveat that there is an immense number of potential external sources that could not be captured or reported.  Findings related to materials should be carefully considered because reporting of which organisms was attached to which substrate was so rarely done that it could not be reliably recorded in this database. Spatial trends should also be considered judisciously due to the lack of tie between specific points and organisms. Studies with large spatial scopes should be removed prior to any spatial analysis. It is also worth noting that data from the Japanese Tsunami Marine Debris (JTMD) database [cite], paper ID 999, has far more detailed and validated records than any other, which may skew results from the North Pacific unless accounted for.
 - Describe what data is present.  
 - Describe where the data came from: organisations, projects, people.  
 - Figure explaining data collection process.  
