--- a/01-database.Rmd
+++ b/01-database.Rmd
@@ -137,15 +137,13 @@ kable(data_sum_table, "latex", booktabs = T, col.names = NULL,
 - It may be useful to combine this database with others containing more detailed data on the organisms' evolutionary biology, physical traits, behaviour, or ecological function. Spatial analyses may georeference the coordinates of this database into marine regions of varying scope, such as through almanacs available through XXXX [cite].  
 - Used alone, this database shows an increasing scientific interest in this novel ecosystem and changes in the way that it is studied. Molecular techniques have yielded a boom in the known diversity of organisms on AMD, particularly for bacteria and fungi. It also highlights the need for more research in the Southern Hemisphere and research in general. Almost all organisms were recorded only once or twice.  
 - While this database has the potential to yield important findings, its sparse nature relative to the known diversity of organisms and environments in the world's oceans is also likely to support the need for more research across disciplines. 
-- In its current state, it may be particularly useful for those researching the impacts of AMD on coastal environments. This database can be easily combined with new findings to provide background and context. It may also be useful for tracking the locations or spread of invasive species for biosecurity researchers and marine resource managers. 
-- Trends found in this database should be presented with the caveat that there is an immense number of potential external sources that could not be captured or reported.  Findings related to materials should be carefully considered because reporting of which organisms was attached to which substrate was so rarely done that it could not be reliably recorded in this database. Spatial trends should also be considered judisciously due to the lack of tie between specific points and organisms. Studies with large spatial scopes should be removed prior to any spatial analysis. It is also worth noting that data from the Japanese Tsunami Marine Debris (JTMD) database [cite], paper ID 999, has far more detailed and validated records than any other, which may skew results from the North Pacific unless accounted for.
-- Describe what data is present.  
-- Describe where the data came from: organisations, projects, people.  
-- Figure explaining data collection process.  
-- Suggestion for pre-processing needed prior to using the data for various applications.  
-- Anywhere else the data is offered.  
-- Describe any ongoing updates or maintenance to that dataset. 
-- Explain link between static set and that set.  
+- In its current state, it may be particularly useful for those researching the impacts of AMD on coastal environments. This database can be easily combined with new findings to provide background and context. It may also be useful for tracking the locations or spread of invasive species for biosecurity researchers and marine resource managers.  
+- Trends found in this database should be presented with the caveat that there is an immense number of potential external sources that could not be captured or reported.  Findings related to materials should be carefully considered because reporting of which organisms was attached to which substrate was so rarely done that it could not be reliably recorded in this database. Spatial trends should also be considered judisciously due to the lack of tie between specific points and organisms. Studies with large spatial scopes should be removed prior to any spatial analysis. It is also worth noting that data from the Japanese Tsunami Marine Debris (JTMD) database [cite], paper ID 999, has far more detailed and validated records than any other, which may skew results from the North Pacific unless accounted for.  
+- The database is separated into five primary tables linked by two primary identifiers (Table XX). Identifiers are unique keys at the highest record levels: study and accepted taxonomic nomenclature. Study level variables include data that was reported most often in the methods section of the paper, like methodology and sampling locations. While material types were reported in the results section, these too were often reported at the level of the study itself and are therefore linked to the unique study identifier. Both accepted and utilised taxonomic nomenclature for the most detailed identification available, or lowest taxonomic unit (LTU), of every identified organism is the second primary identifying key. This links each organism to its correct nomenclature and enables systematic validation and updates as necessary.  
+- All of the data originates in peer-reviewed scientific literature published and returned in searches for the specified queries in three major research repositories (Table XX) between 1992 and 2019. Organisms were recorded on debris items collected from, or deliberately immersed and naturally colonised in, the marine environment during the course of formal scientific research. The database contains records from all marine environments globally, from beaches to salt marshes and deep sea trenches. It only contains what the researchers reported in their publications, not neccessarily all of the organisms found or identified. 
+- It is recommended that users of this database update the taxonomic nomenclature using the noted databases and database IDs provided. Where material types are relevant, it is also recommended to reference current IUPC nomenclature and ensure that materials are described using contemporary naming conventions. Spatial coordinates are provided with descriptive quality ratings to assist in analyses where accuracy is important. However, no particular level of accuracy is guaranteed. For a guide on how to join the different tables, see the diagram included in Appendix XX. 
+- This database is provided in static format at the stable location associated with this publication. Any dynamic or updated versions of this database should reference this publication and be discoverable using that reference.
+- At the time of this publication there is no update schedule and no plans exist to provide this resource in any other format. 
 
 ## Methods  
 - Overview of methods used to collect the field data.  
