--- a/03-biosec.Rmd
+++ b/03-biosec.Rmd
@@ -320,7 +320,7 @@ pct_richness_species <- round(richness_species / richness_ltu, 4)
 
 ```
 
-# Fishing gear and other anthropogenic debris harbour invasive species
+# Invasives on a bottle - fishing gear and other anthropogenic debris harbour invasive species
 
 \chaptermark{Biosecurity concerns of AMD}
 
